--- a/40-blankon.conf
+++ b/40-blankon.conf
@@ -10,7 +10,7 @@
 <alias>
     <family>monospace</family>
     <prefer>
-        <family>Inconsolata</family>
+        <family>Hermit</family>
     </prefer>
 </alias>
 
