--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: blankon-fontconfig
 Section: x11
 Priority: optional
 Maintainer: BlankOn Developers <BlankOn-Dev@googlegroups.com>
-Uploader: Anto Samalona <ansamsoftdev@gmail.com>
+Uploaders: Anto Samalona <ansamsoftdev@gmail.com>
 Build-Depends: cdbs, debhelper (>= 5.0.0)
 Standards-Version: 3.9.4
 Homepage: http://www.blankonlinux.or.id
